deploy/deployment.yaml
# deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django
          image: fdo_image:latest_fdo
          ports:
            - containerPort: 8000
      volumes:
        - name: static-files
          emptyDir: {}
        - name: media-files
          emptyDir: {}
